--- a/Compiladores/nbproject/project.properties
+++ b/Compiladores/nbproject/project.properties
@@ -24,13 +24,20 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Compiladores.jar
+dist.jar=${dist.dir}/Compiladores-Steven.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.java-cup-11b-runtime.jar=C:\\Users\\stevi\\Desktop\\Fuentes\\java-cup-11b-runtime.jar
+file.reference.java-cup-11b.jar=C:\\Users\\stevi\\Desktop\\Fuentes\\java-cup-11b.jar
+file.reference.jflex-1.6.1.jar=C:\\Users\\stevi\\Desktop\\Fuentes\\jflex-1.6.1\\lib\\jflex-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Jflex.classpath}
+    ${libs.javac-api.classpath}:\
+    ${libs.CUP.classpath}:\
+    ${file.reference.java-cup-11b.jar}:\
+    ${file.reference.java-cup-11b-runtime.jar}:\
+    ${file.reference.jflex-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=compiladores.Compiladores
+main.class=Compiladores.MainConsola
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
