--- a/JflexyCupEjemplo/nbproject/private/private.properties
+++ b/JflexyCupEjemplo/nbproject/private/private.properties
@@ -1,2 +1,3 @@
 compile.on.save=true
+file.reference.java-cup-11b-runtime.jar=C:\\Users\\stevi\\Desktop\\Fuentes\\java-cup-11b-runtime.jar
 user.properties.file=C:\\Users\\stevi\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
