--- a/Compiladores/nbproject/project.properties
+++ b/Compiladores/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Compiladores-Steven.jar
+dist.jar=${dist.dir}/Compiladores-Steven-Trasteado.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.java-cup-11b-runtime.jar=C:\\Users\\stevi\\Desktop\\Fuentes\\java-cup-11b-runtime.jar
